--- a/core/template/dashboard/cmd.action.slider.tmplicon.html
+++ b/core/template/dashboard/cmd.action.slider.tmplicon.html
@@ -6,16 +6,49 @@
     <span class="cursor iconCmd#uid# iconCmd"></span>
   </div>
   <div class="value">
-    <div class="slider" value="#state#">
-      <span class="value#uid# sliderValue"></span>
-    </div>
+    <div id="widget_slider#id#" class="slider full-width-slider"></div>
     <span class="timeCmd label label-default #value_history#" data-type="info" data-cmd_id="#value_id#"></span>
   </div>
   <template>
     <div>color : rgb(20,20,20) ({{Couleur du curseur et valeur}})</div>
     <div>time : date ({{Affiche l'info time sous forme de date}})</div>
+    <div>step : 0.5 ({{Pas utilisé pour le changement de valeur}})</div>
   </template>
   <script>
+    var step#id# = 1
+    if ($.issetWidgetOptParam('#step#', 'step')) {
+      step#id# = parseFloat('#step#')
+    }
+    var mySlider#id# = $.createWidgetSlider({
+      sliderDiv: document.getElementById('widget_slider#id#'),
+      state: #state#,
+      min: #minValue#,
+      max: #maxValue#,
+      step: step#id#,
+      tooltips: true,
+      format: true,
+      unite: '#unite#'
+    })
+
+    if ($.issetWidgetOptParam('#color#', 'color')) {
+      $(mySlider#id#.target).find('.noUi-handle').style('background', '#color#', 'important')
+      $(mySlider#id#.target).find('.noUi-connect').style('background', '#color#', 'important')
+    }
+
+    $('.cmd[data-cmd_id=#id#] .iconCmd').on('click', function() {
+      if ($(this).attr('data-state') == 'on') {
+        var value = ('#minValue#' == '') ? 0 : parseInt('#minValue#')
+        jeedom.cmd.execute({id: '#id#', value: {slider: value }})
+      } else {
+        var value = ('#maxValue#' == '') ? 100 : parseInt('#maxValue#')
+        jeedom.cmd.execute({id: '#id#', value: {slider: value}})
+      }
+    })
+
+    mySlider#id#.on('end', function(values, handle) {
+      jeedom.cmd.execute({id: '#id#', value: {slider: values[handle].replace('#unite#', '')}})
+    })
+
     jeedom.cmd.update['#id#'] = function(_options) {
       var cmd = $('.cmd[data-cmd_id=#id#]')
       if ('#_time_widget_#' == '1') {
@@ -28,20 +61,9 @@
         cmd.find('.timeCmd').remove()
       }
       var minValue = ('#minValue#' == '') ? 0 : parseInt('#minValue#')
-      var maxValue = ('#minValue#' == '') ? 100 : parseInt('#maxValue#')
+      var maxValue = ('#maxValue#' == '') ? 100 : parseInt('#maxValue#')
       var stateValue = ('#state#' == '') ? 0 : parseInt(_options.display_value)
-      cmd.find('.slider').slider({
-        min: minValue,
-        max: maxValue,
-        value: stateValue,
-        range: "min",
-        animate: false,
-        slide: function(event, ui) {
-          $(".value#uid#").show()
-          $(".value#uid#").html(ui.value)
-        }
-      })
-
+      mySlider#id#.set(stateValue)
       if (stateValue > minValue) {
         cmd.find('.iconCmd').empty().append("#_icon_on_#").attr('data-state', 'on')
       } else {
@@ -50,25 +72,5 @@
     }
 
     jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#'})
-
-    $('.iconCmd#uid#').off().on('click', function() {
-      if ($(this).attr('data-state') == 'on') {
-        var value = ('#minValue#' == '') ? 0 : parseInt('#minValue#')
-        jeedom.cmd.execute({id: '#id#', value: {slider: value}})
-      } else {
-        var value = ('#maxValue#' == '') ? 100 : parseInt('#maxValue#')
-        jeedom.cmd.execute({id: '#id#', value: {slider: value}})
-      }
-    })
-
-    $(".cmd[data-cmd_uid=#uid#] .slider").on('slidestop', function (event,ui) {
-      jeedom.cmd.execute({id: '#id#', value: {slider: ui.value}})
-      $(".value#uid#").hide()
-    })
-
-    if ($.issetWidgetOptParam('#color#', 'color')) {
-      $('.cmd[data-cmd_id=#id#]').find('div.ui-slider-range').style('background-color', '#color#', 'important')
-      $('.cmd[data-cmd_id=#id#]').find('span.ui-slider-handle').style('background-color', '#color#', 'important')
-    }
   </script>
 </div>
