--- a/core/template/mobile/cmd.action.slider.default.html
+++ b/core/template/mobile/cmd.action.slider.default.html
@@ -1,27 +1,32 @@
 <div class="cmd cmd-widget" data-type="action" data-subtype="slider" data-template="default" data-version="#version#" data-eqLogic_id="#eqLogic_id#" data-cmd_id="#id#" data-cmd_uid="#uid#">
-  <div class="slider full-width-slider">
-    <div class="ui-slider-tooltip"></div>
-    <input type="number" data-type="range" min="#minValue#" max="#maxValue#" value="#state#" data-highlight="true" data-role="none"/>
-  </div>
+  <div id="widget_slider#id#" class="slider full-width-slider"></div>
   <script>
-    var tooltip = $('.cmd[data-cmd_id=#id#]').find('.ui-slider-tooltip')
-    $('.cmd[data-cmd_id=#id#] input').slider({
-      create: function(event, ui) {
-        if ($.issetWidgetOptParam('#color#', 'color')) {
-          $(event.target.parentNode).find('div.ui-slider-bg').style('background-color', '#color#', 'important')
-          $(event.target.parentNode).find('a.ui-slider-handle').style('background-color', '#color#', 'important')
-        }
-      }
+    var step#id# = 0.5
+    if ($.issetWidgetOptParam('#step#', 'step')) {
+      step#id# = parseFloat('#step#')
+    }
+    var mySlider#id# = $.createWidgetSlider({
+      sliderDiv: document.getElementById('widget_slider#id#'),
+      state: #state#,
+      min: #minValue#,
+      max: #maxValue#,
+      step: step#id#,
+      tooltips: true,
+      format: true,
+      unite: '#unite#'
     })
 
-    $('.cmd[data-cmd_uid=#uid#]').on({
-      'slidestop': function(event, ui) {
-        jeedom.cmd.execute({id: '#id#', value: {slider: event.target.value}})
-      }
-    }, '.slider')
+    if ($.issetWidgetOptParam('#color#', 'color')) {
+      $(mySlider#id#.target).find('.noUi-handle').style('background', '#color#', 'important')
+      $(mySlider#id#.target).find('.noUi-connect').style('background', '#color#', 'important')
+    }
+
+    mySlider#id#.on('end', function(values, handle) {
+      jeedom.cmd.execute({id: '#id#', value: {slider: values[handle].replace('#unite#', '')}})
+    })
 
     jeedom.cmd.update['#id#'] = function(_options) {
-      $(".cmd[data-cmd_id=#id#] .slider input").value(_options.display_value)
+      mySlider#id#.set(_options.display_value)
     }
   </script>
 </div>
