--- a/core/template/mobile/cmd.info.binary.shutter.html
+++ b/core/template/mobile/cmd.info.binary.shutter.html
@@ -1,5 +1,5 @@
 <div class="cmd cmd-widget shuttergauge cursor #history#" data-type="info" data-subtype="binary" data-template="shutter" data-version="#version#" data-eqLogic_id="#eqLogic_id#" data-cmd_id="#id#" data-cmd_uid="#uid#">
-  <div  class="cmdName #hide_name#">#name_display#</div>
+  <div class="cmdName #hide_name#">#name_display#</div>
   <div class="shuttergauge-chart">
     <div class="shuttergauge-bckg">
       <div class="shuttergauge-value"></div>
@@ -7,9 +7,7 @@
     <div class="shuttergauge-state state"><strong>#state#</strong> <strong>#unite#</strong></div>
   </div>
   <div class="cmdStats #hide_history#">
-    <div class="col-xs-12 center-block">
-      <span title='{{Min}}' class='tooltips'>#minHistoryValue#</span>|<span title='{{Moyenne}}' class='tooltips'>#averageHistoryValue#</span>|<span title='{{Max}}' class='tooltips'>#maxHistoryValue#</span> <i class="#tendance#"></i>
-    </div>
+      <span title='{{Min}}' class='tooltips'>#minHistoryValue#</span>|<span title='{{Moyenne}}' class='tooltips'>#averageHistoryValue#</span>|<span title='{{Max}}' class='tooltips'>#maxHistoryValue# <i class="#tendance#"></i></span>
   </div>
   <script>
     jeedom.cmd.update['#id#'] = function(_options){
