--- a/core/template/mobile/cmd.info.numeric.shutter.html
+++ b/core/template/mobile/cmd.info.numeric.shutter.html
@@ -7,9 +7,7 @@
     <div class="shuttergauge-state state"><strong>#state#</strong> <strong>#unite#</strong></div>
   </div>
   <div class="cmdStats #hide_history#">
-    <div class="col-xs-12 center-block">
-      <span title='{{Min}}' class='tooltips'>#minHistoryValue#</span>|<span title='{{Moyenne}}' class='tooltips'>#averageHistoryValue#</span>|<span title='{{Max}}' class='tooltips'>#maxHistoryValue#</span> <i class="#tendance#"></i>
-    </div>
+      <span title='{{Min}}' class='tooltips'>#minHistoryValue#</span>|<span title='{{Moyenne}}' class='tooltips'>#averageHistoryValue#</span>|<span title='{{Max}}' class='tooltips'>#maxHistoryValue# <i class="#tendance#"></i></span>
   </div>
   <script>
     jeedom.cmd.update['#id#'] = function(_options) {
