--- a/core/template/dashboard/cmd.info.numeric.tmplmultistate.html
+++ b/core/template/dashboard/cmd.info.numeric.tmplmultistate.html
@@ -63,5 +63,5 @@
       $('.cmd[data-cmd_id=#id#]').trigger('changeThemeEventCmd')
     })
   </script>
-  <!-- Hide parameters  #_mobile_width_# -->
+  <!-- parameters  #_mobile_width_# -->
 </div>
