--- a/core/template/dashboard/cmd.action.other.tmplimg.html
+++ b/core/template/dashboard/cmd.action.other.tmplimg.html
@@ -69,5 +69,5 @@
       $('.cmd[data-cmd_id=#id#]').trigger('changeThemeEventCmd', theme)
     })
   </script>
-  <!-- Hide parameters  #_mobile_width_# -->
+  <!-- parameters  #_mobile_width_# -->
 </div>
