--- a/core/template/dashboard/cmd.info.string.tmplmultistate.html
+++ b/core/template/dashboard/cmd.info.string.tmplmultistate.html
@@ -60,5 +60,5 @@
       $('.cmd[data-cmd_id=#id#]').trigger('changeThemeEventCmd',theme)
     })
   </script>
-  <!-- Hide parameters  #_mobile_width_# -->
+  <!-- parameters  #_mobile_width_# -->
 </div>
