--- a/core/template/mobile/cmd.action.slider.tmplimg.html
+++ b/core/template/mobile/cmd.action.slider.tmplimg.html
@@ -1,7 +1,7 @@
 <div class="cmd cmd-widget #history#" data-type="action" data-subtype="slider" data-template="tmplimg" data-version="#version#" data-eqLogic_id="#eqLogic_id#" data-cmd_id="#id#" data-cmd_uid="#uid#">
   <center>
     <div class="cmdName #hide_name#">#name_display#</div>
-    <span class="cursor iconCmd"></span>
+    <span class="cursor imgCmd"></span>
     <div id="widget_slider#id#" class="slider full-width-slider"></div>
     <span class="timeCmd value #value_history#" data-type="info" data-cmd_id="#value_id#"></span>
   </center>
@@ -26,7 +26,11 @@
       $(mySlider#id#.target).find('.noUi-connect').style('background', '#color#', 'important')
     }
 
-    $('.cmd[data-cmd_id=#id#] .iconCmd').on('click', function() {
+    mySlider#id#.on('end', function(values, handle) {
+      jeedom.cmd.execute({id: '#id#', value: {slider: values[handle].replace('#unite#', '')}})
+    })
+
+    $('.cmd[data-cmd_id=#id#] .imgCmd').on('click', function() {
       if ($(this).attr('data-state') == 'on') {
         var value = ('#minValue#' == '') ? 0 : parseInt('#minValue#');
         jeedom.cmd.execute({id: '#id#', value: {slider: value }})
@@ -34,10 +38,6 @@
         var value = ('#maxValue#' == '') ? 100 : parseInt('#maxValue#')
         jeedom.cmd.execute({id: '#id#', value: {slider: value}})
       }
-    })
-
-    mySlider#id#.on('end', function(values, handle) {
-      jeedom.cmd.execute({id: '#id#', value: {slider: values[handle].replace('#unite#', '')}})
     })
 
     jeedom.cmd.update['#id#'] = function(_options) {
@@ -58,36 +58,33 @@
       mySlider#id#.set(stateValue)
       if (stateValue > minValue) {
         cmd.attr('data-state','on')
-        cmd.find('.iconCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_on_#", "#_img_dark_on_#"))
+        cmd.find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_on_#", "#_img_dark_on_#")).attr('data-state', 'on')
       } else {
         cmd.attr('data-state','off')
-        cmd.find('.iconCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_off_#", "#_img_dark_off_#"))
+        cmd.find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_off_#", "#_img_dark_off_#")).attr('data-state', 'off')
       }
 
       var style = ''
-      if (!isNaN('#_mobile_width_#')) {
-        style = 'max-width:#_mobile_width_#px !important;'
+      if (!isNaN('#_desktop_width_#')) {
+        style = 'max-width:#_desktop_width_#px !important;'
       }
-      cmd.find('.imgCmd img').attr('style',style)
-      cmd.off('changeThemeEvent').on('changeThemeEventCmd',function (event, theme) {
-        var cmd = $('.cmd[data-cmd_id=#id#]')
-        if (cmd.attr('data-state') == 'on') {
-          cmd.find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_on_#", "#_img_dark_on_#"))
-        } else {
-          cmd.find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_off_#", "#_img_dark_off_#"))
-        }
-        var style = ''
-        if (!isNaN('#_mobile_width_#')) {
-          style = 'max-width:#_mobile_width_#px !important;'
-        }
-        cmd.find('.imgCmd img').attr('style',style)
-      });
+      cmd.find('.imgCmd img').attr('style', style)
     }
 
     jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#'})
 
-    $('body').on('changeThemeEvent', function (event,theme) {
-      $('.cmd[data-cmd_id=#id#]').trigger('changeThemeEventCmd',theme)
-    });
+    $('body').on('changeThemeEvent', function (event, theme) {
+      var cmd = $('.cmd[data-cmd_id=#id#]')
+      if (cmd.attr('data-state') == 'on') {
+        cmd.find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_on_#", "#_img_dark_on_#"))
+      } else {
+        cmd.find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_off_#", "#_img_dark_off_#"))
+      }
+      var style = ''
+      if (!isNaN('#_desktop_width_#')) {
+        style = 'max-width:#_desktop_width_#px !important;'
+      }
+      cmd.find('.imgCmd img').attr('style',style)
+    })
   </script>
 </div>
