--- a/core/template/dashboard/cmd.action.slider.tmplimg.html
+++ b/core/template/dashboard/cmd.action.slider.tmplimg.html
@@ -34,33 +34,21 @@
         }
       });
       if (stateValue > minValue) {
-        cmd.find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_on_#","#_img_dark_on_#")).attr('data-state','on');
+        cmd.find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_on_#", "#_img_dark_on_#")).attr('data-state','on');
       }else {
-        cmd.find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_off_#","#_img_dark_off_#")).attr('data-state','off');
+        cmd.find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_off_#", "#_img_dark_off_#")).attr('data-state','off');
       }
       var style = '';
       if(!isNaN('#_desktop_width_#')){
         style = 'width:#_desktop_width_#px !important;'
       }
       cmd.find('.imgCmd img').attr('style',style);
-      cmd.off('changeThemeEventCmd').on('changeThemeEventCmd',function (event, theme) {
-        var cmd = $('.cmd[data-cmd_id=#id#]');
-        if(cmd.attr('data-state') == 'on'){
-          cmd.find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_on_#","#_img_dark_on_#"))
-        }else{
-          cmd.find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_off_#","#_img_dark_off_#"))
-        }
-        var style = '';
-        if(!isNaN('#_desktop_width_#')){
-          style = 'width:#_desktop_width_#px !important;'
-        }
-        cmd.find('.imgCmd img').attr('style',style);
-      });
     }
+    
     jeedom.cmd.update['#id#']({display_value:'#state#',valueDate:'#valueDate#',collectDate:'#collectDate#',alertLevel:'#alertLevel#'});
 
     $('.imgCmd#uid#').off().on('click', function() {
-      if ($('.cmd[data-cmd_id=#id#]').attr('data-state') == 'on') {
+      if ($(this).attr('data-state') == 'on') {
         var value = ('#minValue#' == '') ? 0 : parseInt('#minValue#');
         jeedom.cmd.execute({id: '#id#', value: {slider: value}});
       } else {
@@ -68,12 +56,24 @@
         jeedom.cmd.execute({id: '#id#', value: {slider: value}});
       }
     });
+    
     $(".cmd[data-cmd_uid=#uid#] .slider").on('slidestop', function (event,ui) {
       jeedom.cmd.execute({id: '#id#', value: {slider: ui.value}});
       $(".value#uid#").hide();
     });
+    
     $('body').on('changeThemeEvent', function (event,theme) {
-      $('.cmd[data-cmd_id=#id#]').trigger('changeThemeEventCmd',theme);
+      var cmd = $('.cmd[data-cmd_id=#id#]');
+      if(cmd.attr('data-state') == 'on'){
+        cmd.find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_on_#","#_img_dark_on_#"))
+      }else{
+        cmd.find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_off_#","#_img_dark_off_#"))
+      }
+      var style = '';
+      if(!isNaN('#_desktop_width_#')){
+        style = 'width:#_desktop_width_#px !important;'
+      }
+      cmd.find('.imgCmd img').attr('style',style);
     });
   </script>
   <!-- Hide parameters  #_mobile_width_# -->
