--- a/core/template/dashboard/scenario.html
+++ b/core/template/dashboard/scenario.html
@@ -7,7 +7,7 @@
       <a class="btn btn-default btn-sm changeScenarioState tooltips" data-state="deactivate" title="{{Desactiver}}"><i class="fa fa-power-off"></i></a>
       <a class="btn btn-default btn-sm changeScenarioState" data-state="start"><i class="fa fa-play"></i></a>
       <a class="btn btn-default btn-sm changeScenarioState" data-state="stop"><i class="fa fa-stop"></i></a>
-      <a class="btn btn-default btn-sm scenario_ViewLog" data-state="stop"><i class="far fa-file"></i></a>
+      <a class="btn btn-default btn-sm scenario_ViewLog"><i class="far fa-file"></i></a>
       <div class="value">
         <span id="lastLaunch#id#" class="timeCmd label">#lastLaunch#</span>
       </div>
